--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "@turf/turf": "^7.2.0",
     "colorbrewer": "^1.6.1",
     "d3-array": "^3.2.4",
     "d3-format": "^3.1.0",
